Support for angular 1.2.x

--- a/controls/simple/templates/bs/group.html
+++ b/controls/simple/templates/bs/group.html
@@ -1,4 +1,4 @@
 <div>
-    <p class="text-muted">{{::$control.title}}</p>
+    <p class="text-muted">{{$control.title}}</p>
     <div ng-repeat="c in ::$subControls" fm-control="c"></div>
 </div>
