--- a/controls/simple/templates/bs/group-items.html
+++ b/controls/simple/templates/bs/group-items.html
@@ -1,4 +1,4 @@
-<p class="text-muted">{{::$control.title}}</p>
+<p class="text-muted">{{$control.title}}</p>
 
 <ul class="nav nav-tabs">
     <li><a href ng-click="$group.addItem()"><i class="glyphicon glyphicon-plus"></i></a></li>
