--- a/controls/tree/templates/bs/tree.html
+++ b/controls/tree/templates/bs/tree.html
@@ -1,5 +1,5 @@
 <h3 class="text-muted" ng-if="::!$isSubtree">
-    <a href ng-click="$tree.select()">{{::$control.title}}</a>
+    <a href ng-click="$tree.select()">{{$control.title}}</a>
 </h3>
 <div class="row">
     <div class="col-lg-3" ng-if="::!$isSubtree">
