--- a/controls/simple/templates/bs/input-range.html
+++ b/controls/simple/templates/bs/input-range.html
@@ -1,8 +1,8 @@
 <div class="form-group" ng-class="{'has-error': $input.$invalid}">
     <label class="control-label col-sm-4" fm-control-label></label>
 
-    <div class="col-sm-8" ng-if="$empty" fm-control-empty></div>
-    <div class="col-sm-8" ng-if="!$empty">
+    <div class="col-sm-8" ng-if="$useDefault" fm-control-empty></div>
+    <div class="col-sm-8" ng-hide="$useDefault">
         <div class="input-group">
             <input class="form-control" type="range" fm-control-input/>
             <span class="input-group-addon" style="min-width: 60px">{{$empty ? 'Auto' : $value}}</span>
