--- a/controls/simple/templates/bs/input.html
+++ b/controls/simple/templates/bs/input.html
@@ -1,8 +1,8 @@
 <div class="form-group" ng-class="{'has-error': $input.$dirty && $input.$invalid}">
     <label class="control-label col-sm-4" fm-control-label></label>
 
-    <div class="col-sm-8" ng-if="$empty" fm-control-empty></div>
-    <div class="col-sm-8" ng-if="!$empty">
+    <div class="col-sm-8" ng-if="$useDefault" fm-control-empty></div>
+    <div class="col-sm-8" ng-hide="$useDefault">
         <input class="form-control" fm-control-input/>
 
         <p class="help-block pull-right">
