--- a/src/controls/simple/templates/bs-4/radiolist.html
+++ b/src/controls/simple/templates/bs-4/radiolist.html
@@ -3,7 +3,7 @@
 
     <div class="col-sm-8" ng-if="$useDefault" fm-control-empty></div>
     <div class="col-sm-8" ng-hide="$useDefault">
-        <p class="help-block col-sm-2 pull-xs-right">
+        <p class="help-block pull-xs-right">
             <a href ng-click="$setEmpty()">use default</a>
         </p>
 
