Tweaks to bs4 templates

--- a/src/controls/simple/templates/bs-4/checkbox.html
+++ b/src/controls/simple/templates/bs-4/checkbox.html
@@ -8,8 +8,8 @@
                 <input type="checkbox" fm-control-input> {{$control.description}}
             </label>
 
-            <p class="help-block pull-xs-right">
-                <a href ng-click="$setEmpty()">use default</a>
+            <p class="help-block">
+                <a href ng-click="$setEmpty()">Reset to default</a>
             </p>
         </div>
     </div>
