--- a/src/controls/simple/templates/bs-4/input-range.html
+++ b/src/controls/simple/templates/bs-4/input-range.html
@@ -7,8 +7,8 @@
             <input class="form-control" type="range" fm-control-input/>
             <span class="input-group-addon" style="min-width: 60px">{{$empty ? 'Auto' : $value}}</span>
         </div>
-        <p class="help-block pull-xs-right">
-            <a href ng-click="$setEmpty()">use default</a>
+        <p class="help-block">
+            <a href ng-click="$setEmpty()">Reset to default</a>
         </p>
 
         <p ng-if="$control.description" class="help-block">{{$control.description}}</p>
