--- a/src/controls/simple/templates/bs-4/radiolist.html
+++ b/src/controls/simple/templates/bs-4/radiolist.html
@@ -3,14 +3,13 @@
 
     <div class="col-sm-8" ng-if="$useDefault" fm-control-empty></div>
     <div class="col-sm-8" ng-hide="$useDefault">
-        <p class="help-block pull-xs-right">
-            <a href ng-click="$setEmpty()">use default</a>
-        </p>
-
         <div class="radio" ng-repeat="li in $control.display.options">
             <label>
                 <input type="radio" fm-control-input ng-value="li.id"/> {{li.title}}
             </label>
+        </div>
+        <div class="radio">
+            <a href ng-click="$setEmpty()">Reset to default</a>
         </div>
     </div>
 </div>
