--- a/src/controls/simple/templates/bs-4/select.html
+++ b/src/controls/simple/templates/bs-4/select.html
@@ -5,8 +5,8 @@
     <div class="col-sm-8" ng-hide="$useDefault">
         <select class="form-control" fm-control-input></select>
 
-        <p class="help-block pull-xs-right">
-            <a href ng-click="$setEmpty()">use default</a>
+        <p class="help-block">
+            <a href ng-click="$setEmpty()">Reset to default</a>
         </p>
     </div>
 </div>
