--- a/src/controls/simple/templates/bs-4/textarea.html
+++ b/src/controls/simple/templates/bs-4/textarea.html
@@ -5,8 +5,8 @@
     <div class="col-sm-8" ng-hide="$useDefault">
         <textarea class="form-control" fm-control-input></textarea>
 
-        <p class="help-block pull-xs-right">
-            <a href ng-click="$setEmpty()">use default</a>
+        <p class="help-block">
+            <a href ng-click="$setEmpty()">Reset to default</a>
         </p>
 
         <p ng-if="$control.description" class="help-block">{{$control.description}}</p>
