--- a/src/controls/simple/templates/bs4-common/control-label.html
+++ b/src/controls/simple/templates/bs4-common/control-label.html
@@ -1,4 +1,4 @@
 {{$control.title}}
 <a class="control-help" ng-if="$control.display.hint" title="{{$control.display.hint}}">
-    <i class="glyphicon glyphicon-info-sign"></i>
+    <i class="fa fa-info-circle"></i>
 </a>
