--- a/src/controls/simple/templates/bs4/group-items.html
+++ b/src/controls/simple/templates/bs4/group-items.html
@@ -1,12 +1,12 @@
 <p class="text-muted">{{$control.title}}</p>
 
 <ul class="nav nav-tabs">
-    <li><a href ng-click="$group.addItem()"><i class="glyphicon glyphicon-plus"></i></a></li>
+    <li><a href ng-click="$group.addItem()"><i class="fa fa-plus"></i></a></li>
     <li ng-class="{active: c.$selected}" ng-repeat="c in $group.$items">
         <a href ng-click="$group.select(c)">{{$group.getLabel(c)}}</a>
     </li>
     <li class="pull-xs-right">
-        <a href ng-click="$group.removeItem($group.selected)"><i class="glyphicon glyphicon-minus"></i></a>
+        <a href ng-click="$group.removeItem($group.selected)"><i class="fa fa-minus"></i></a>
     </li>
 </ul>
 <div ng-if="!$group.selected">
